--- a/book-fr/06-analyses-partielles-de-redondance.Rmd
+++ b/book-fr/06-analyses-partielles-de-redondance.Rmd
@@ -1,181 +1,149 @@
-# Partial Redundancy Analysis
+# RDA partielle
 
-Partial RDA is a special case of RDA in which the response variables Y
-are related to explanatory variables X in the presence of additional
-explanatory variables, W, called covariables. As in partial linear
-regression, the linear effect of X variables on the Y variables are
-adjusted for the effects of the covariables W. For this, a RDA of the
-covariables W on the response variables Y is first performed. The
-residuals of this RDA are then extracted, i.e. a matrix Yres\|W
-containing the Y response variables in which the effect of W were
-removed. The partial RDA finally correspond to the RDA of X on Yres\|W.
-All statistics previously presented for RDA also apply for partial RDA.
+La RDA partielle est un cas particulier de la RDA qui permet de tenir compte de **covariables**. En d'autres mots, on peut modéliser les effets linéaires de la matrice $X$ sur la matrice $Y$, tout en controllant pour l'effet d'une matrice de variables explicatives supplémentaires $W$, appelées **covariables** (ou covariables). Comme dans la régression linéaire partielle, l'effet linéaire des variables $X$ sur les variables $Y$ est *ajusté* pour les effets des covariables $W$. Pour cela, on effectue d'abord une RDA des covariables $W$ sur les variables de réponse $Y$. On extrait ensuite les résidus de ce RDA, c'est-à-dire une matrice $Y_{res}|W$ contenant les variables réponses $Y$ dans lesquelles l'effet de $W$ a été retiré. La RDA partielle correspond à la RDA de $X$ sur $Y_{res}|W$. Toutes les statistiques présentées précédemment pour la RDA s'appliquent également à la RDA partielle.
 
-Partial RDA is thus a powerful tool when users what to assess the effect
-of environmental variables on species composition while taking into
-account the species variation due to other environmental variables with
-no interest. It can also be used to control for well-known linear
-effects, isolate the effect of a single explanatory variable or analyse
-related samples. In the example below, we will assess the effect of
-water chemistry on fish species abundances partialling out the effect of
-physiography.
-
-In R, partial RDA is performed in the same way as RDA using rda() with
-the addition of a condition term:
-
-```{r, echo = TRUE, eval = FALSE}
-#Divide the env2 dataframe into two dataframes: 
-envtopo <- env[, c(1:3)] # Physiography : explanatory dataset 1
-names(envtopo)
-envchem <- env[, c(4:10)] # Water quality : explanatory dataset 2
-names(envchem)
- 
-#Run the partial RDA
-spechem.physio=rda(spe.hel, envchem, envtopo)
-summary(spechem.physio, display=NULL)
-#or
-spechem.physio2=rda(spe.hel ~ pH + dur + pho + nit + amm + oxy + dbo 
-                    + Condition(alt + pen + deb), data=env)
- 
-#Extract the results
-summary(spechem.physio, display=NULL)
- 
-#Calculate the adjusted R2 of the partial RDA
-(R2adj <- RsquareAdj(spechem.physio)$adj.r.squared)
- 
-#Test the significance of the axes in partial RDA
-anova.cca(spechem.physio, step=1000)
-anova.cca(spechem.physio2, step=1000, by="axis")
- 
-#Construct the triplots
-#Scaling 1
-windows(title="Partial RDA scaling 1")
-plot(spechem.physio, scaling=1, main="Triplot partial RDA - scaling 1", type="none", xlab=c("RDA1"), ylab=c("RDA2"), xlim=c(-1,1), ylim=c(-1,1))
-points(scores(spechem.physio, display="sites", choices=c(1,2), scaling=1),
-       pch=21, col="black", bg="steelblue", cex=1.2)
-arrows(0,0,
-       scores(spechem.physio, display="species", choices=c(1), scaling=1),
-       scores(spechem.physio, display="species", choices=c(2), scaling=1),
-       col="black",length=0)
-text(scores(spechem.physio, display="species", choices=c(1), scaling=1),
-     scores(spechem.physio, display="species", choices=c(2), scaling=1),
-     labels=rownames(scores(spechem.physio, display="species", scaling=1)),
-     col="black", cex=0.8)  
-arrows(0,0,
-      scores(spechem.physio, display="bp", choices=c(1), scaling=1),
-      scores(spechem.physio, display="bp", choices=c(2), scaling=1),
-      col="red")
-text(scores(spechem.physio, display="bp", choices=c(1), scaling=1)+0.05,
-     scores(spechem.physio, display="bp", choices=c(2), scaling=1)+0.05,
-     labels=rownames(scores(spechem.physio, display="bp", choices=c(2), scaling=1)),
-     col="red", cex=1) 
- 
-#Scaling 2
-windows(title="Partial RDA scaling 2")
-plot(spechem.physio, scaling=2, main="Triplot partial RDA - scaling 2", type="none", xlab=c("RDA1"), ylab=c("RDA2"), xlim=c(-1,1), ylim=c(-1,1))
-points(scores(spechem.physio, display="sites", choices=c(1,2), scaling=2),
-       pch=21, col="black", bg="steelblue", cex=1.2)
-arrows(0,0,
-       scores(spechem.physio, display="species", choices=c(1), scaling=2),
-       scores(spechem.physio, display="species", choices=c(2), scaling=2),
-       col="black",length=0)
-text(scores(spechem.physio, display="species", choices=c(1), scaling=2),
-     scores(spechem.physio, display="species", choices=c(2), scaling=2),
-     labels=rownames(scores(spechem.physio, display="species", scaling=2)),
-     col="black", cex=0.8)  
-arrows(0,0,
-       scores(spechem.physio, display="bp", choices=c(1), scaling=2),
-       scores(spechem.physio, display="bp", choices=c(2), scaling=2),
-       col="red")
-text(scores(spechem.physio, display="bp", choices=c(1), scaling=2)+0.05,
-     scores(spechem.physio, display="bp", choices=c(2), scaling=2)+0.05,
-     labels=rownames(scores(spechem.physio, display="bp", choices=c(2), scaling=2)),
-     col="red", cex=1)  
+```{r, echo=FALSE, out.width="70%", fig.cap="The basic structure of a redundancy analysis (RDA).", fig.align="center"}
+knitr::include_graphics("images/PartialRDA.png")
 ```
 
-This RDA is significant (p\<0.001) as well as the two first canonical
-axis. Water chemistry explained 31.89% of the variance of fish species
-composition, physiographic covariables explained 41.53% of this
-variation and the unexplained variation is 26.59%. The adjusted R² of
-this RDA is 24.13%. The triplot looks like:
+La RDA partielle a plusieurs applications. C'est un outil puissant pour évaluer l'effet des variables environnementales sur la composition des espèces tout en tenant compte de la variation due à d'autres variables environnementales qui ne sont pas visées par l'étude. Un exemple courant de ceci en écologie des communautés est de tester l'importance des variables environnementales tout en contrôlant pour l'effet de l'espace. La RDA partielle peut également être utilisée pour contrôler des effets linéaires bien connus, ou pour isoler l'effet d'une seule variable explicative.
 
-![](images/doubs_rdapart2.png){.align-center}
+## Exemple: RDA partielle sur les données Doubs
 
-**Challenge 2**
+Dans `R`, on peut faire une RDA partielle avec la fonction `rda()`. Par exemple, évaluons l'effet de la chimie de l'eau sur l’abondance des poissons (`spe.hel`) en tenant compte de covariables topographiques.
 
-Run the partial RDA of the mite environmental variables of the mite
-species abundances partialling out for the substrate variables
-(SubsDens, WaterCont and Substrate). Is the model significant? Which are
-the significant axes? Interpret the obtained triplot.
+```{r}
+# Divisez le tableau de données environnementales en deux:
+# variables topographiques et chimiques
+env.topo <- subset(env.z, select = c(alt, pen, deb))
+env.chem <- subset(env.z, select = c(pH, dur, pho, nit, amm, oxy, dbo))
 
-**Challenge 2**: Solution
-
-
-
-Here is some potential code:
-
-```{r, echo = TRUE, eval = FALSE}
-#Partial RDA
-mite.spe.subs=rda(mite.spe.hel ~ Shrub + Topo
-                  + Condition(SubsDens + WatrCont + Substrate), data=mite.env)
- 
-#Summary
-summary(mite.spe.subs, display=NULL)
-(R2adj <- RsquareAdj(mite.spe.subs)$adj.r.squared)
- 
-#Significant axes
-anova.cca(mite.spe.subs, step=1000)
-anova.cca(mite.spe.subs, step=1000, by="axis")
- 
-#Triplot scaling 1
-windows(title="Partial RDA scaling 1")
-plot(mite.spe.subs, scaling=1, main="Triplot partial RDA - scaling 1", type="none", xlab=c("RDA1"), ylab=c("RDA2"), xlim=c(-1,1), ylim=c(-1,1))
-points(scores(mite.spe.subs, display="sites", choices=c(1,2), scaling=1),
-       pch=21, col="black", bg="steelblue", cex=1.2)
-arrows(0,0,
-       scores(mite.spe.subs, display="species", choices=c(1), scaling=1),
-       scores(mite.spe.subs, display="species", choices=c(2), scaling=1),
-       col="black",length=0)
-text(scores(mite.spe.subs, display="species", choices=c(1), scaling=1),
-     scores(mite.spe.subs, display="species", choices=c(2), scaling=1),
-     labels=rownames(scores(mite.spe.subs, display="species", scaling=1)),
-     col="black", cex=0.8)  
-arrows(0,0,
-       scores(mite.spe.subs, display="bp", choices=c(1), scaling=1),
-       scores(mite.spe.subs, display="bp", choices=c(2), scaling=1),
-       col="red")
-text(scores(mite.spe.subs, display="bp", choices=c(1), scaling=1)+0.05,
-     scores(mite.spe.subs, display="bp", choices=c(2), scaling=1)+0.05,
-     labels=rownames(scores(mite.spe.subs, display="bp", choices=c(2), scaling=1)),
-     col="red", cex=1) 
- 
-#Triplot scaling 2
-windows(title="Partial RDA scaling 2")
-plot(mite.spe.subs, scaling=2, main="Triplot partial RDA - scaling 2", type="none", xlab=c("RDA1"), ylab=c("RDA2"), xlim=c(-1,1), ylim=c(-1,1))
-points(scores(mite.spe.subs, display="sites", choices=c(1,2), scaling=2),
-       pch=21, col="black", bg="steelblue", cex=1.2)
-arrows(0,0,
-       scores(mite.spe.subs, display="species", choices=c(1), scaling=2),
-       scores(mite.spe.subs, display="species", choices=c(2), scaling=2),
-       col="black",length=0)
-text(scores(mite.spe.subs, display="species", choices=c(1), scaling=2),
-     scores(mite.spe.subs, display="species", choices=c(2), scaling=2),
-     labels=rownames(scores(mite.spe.subs, display="species", scaling=2)),
-     col="black", cex=0.8)  
-arrows(0,0,
-       scores(mite.spe.subs, display="bp", choices=c(1), scaling=2),
-       scores(mite.spe.subs, display="bp", choices=c(2), scaling=2),
-       col="red")
-text(scores(mite.spe.subs, display="bp", choices=c(1), scaling=2)+0.05,
-     scores(mite.spe.subs, display="bp", choices=c(2), scaling=2)+0.05,
-     labels=rownames(scores(mite.spe.subs, display="bp", choices=c(2), scaling=2)),
-     col="red", cex=1)  
+# Faire la RDA partielle
+spe.partial.rda <- rda(spe.hel, env.chem, env.topo)
 ```
 
-![](images/partial_rda_ch6.png){.align-center}
+> **Note:** On peut aussi utiliser une syntaxe de formule comme `Y ~ X + Condition(W)`, où `Condition()` permet de tenir compete de covariables. 
 
-This RDA is significant (p\<0.001) as well as the first canonical axis.
-Environmental variables explained 9.81% of the variance of mite species
-composition, substrate covariables explained 42.84% of this variation
-and the unexplained variation is 47.35%. The adjusted R² of this RDA is
-8.33%. 
+```{r, eval = FALSE}
+# Syntaxe alternative 
+spe.partial.rda <- rda(spe.hel ~ pH + dur + pho + nit + amm + oxy + dbo +
+                       Condition(alt + pen + deb), # covariables ici
+                       data = env.z)
+```
+
+### Interprétation de la sortie d'une RDA partielle
+
+Le résultat d'une RDA partielle est très similaire à celui présenté dans la section précédente sur la RDA. La principale différence est que nous avons des covariables dans notre modèle, ce qui signifie que nous pouvons déterminer la proportion de la variation expliquée par ces variables supplémentaires, mais qui ne sont pas "*intéressantes*". Encore une fois, la première section du résumé contient les éléments dont nous avons besoin pour vérifier la performance de notre RDA partielle. 
+
+```{r, eval = TRUE, collapse=FALSE, output.lines=(5:10)}
+summary(spe.partial.rda)
+```
+
+* **Conditioned Proportion**:  variance de $Y$ expliquée par $W$ **(41.53%)**
+* **Constrained Proportion**: variance de $Y$ expliquée par $X$ **(31.89%)**
+* **Unconstained Proportion**: variance de $Y$ non expliquée **(26.59%)**
+
+> Comment présenteriez-vous ces résultats? La chimie de l’eau explique **31.89%** de l’abondance des espèces de poissons, tandis que la topographie explique **41.53%** de la variation en abondances des poissons.
+
+### Tester la significativité
+
+Comme pour le RDA, nous pouvons interpréter la signification de notre modèle à l'aide de deux informations clés.
+
+1. Quel est le **pouvoir explicatif** du modèle ?
+```{r}
+# Extraire le R2 ajusté du modèle
+RsquareAdj(spe.partial.rda)$adj.r.squared
+```
+
+2. Est-ce que le modèle est **significatif**?
+```{r output.lines=-c(2,9,10)}
+# Évaluer la significativité statistique du modèle
+anova.cca(spe.partial.rda, step = 1000)
+```
+
+> Notre modèle explique 24.1% de la variation en abondance de poissons entre sites. Il est aussi statistiquement significatif (p = 0.001)!
+
+### Représentation graphique 
+
+On peut visualiser les effets des variables environnementales sur la communauté de poissons avec la fonction `ordiplot()`.
+
+```{r, fig.height=4.5, fig.width=4.5}
+ordiplot(spe.partial.rda, 
+         scaling = 2,
+         main = "Rivière Doubs - Cadrage 2")
+```
+
+> Recall: Le cadrage de type 2 montre les effets des variables explicatives, donc de la matrice X sur la matrice Y une fois qu'on a controllé pour l'effet des covariables W. 
+
+:::puzzle
+
+**Note:** *Les variables topographiques ne sont pas représentées. Pourquoi?*
+
+Le RDA partiel ne fait qu'*ajuster* les effets des variables explicatives en fonction des covariables. Les covariables ne sont pas *d'intérêt*, et ne sont donc pas représentées graphiquement.
+
+:::
+
+## Défi 2 
+
+```{r, echo = FALSE, eval = FALSE}
+# Défi 2: 
+# Effectuez une RDA partielle de l’abondance des espèces de mites (`mite.spe.hel`) en fonction des variables environnementales, tenant compte de l’effet du substrat (`SubsDens`, `WaterCont` and `Substrate`).
+# * Quel pourcentage de variance est expliqué par les variables environnementales?
+# * Le modèle est-il significatif?
+# * Quels sont les axes significatifs?
+```
+
+Effectuez une RDA partielle de l’abondance des espèces de mites (`mite.spe.hel`) en fonction des variables environnementales, tenant compte de l’effet du substrat (`SubsDens`, `WaterCont` and `Substrate`).
+* Quel pourcentage de variance est expliqué par les variables environnementales?
+* Le modèle est-il significatif?
+* Quels sont les axes significatifs?
+
+Rappel des données et fonctions utiles:
+```{r, eval = FALSE}
+rda()
+summary()
+RsquareAdj()
+anova.cca() # voir l'argument 'by' dans ?anova.cca
+```
+
+
+### Défi 2: Solution
+
+```{r, echo = FALSE, eval = FALSE}
+# Défi 2: Solution! Spoilers ci-dessous!!
+```
+
+**Étape 1:** Transformer et standardiser les données.
+
+Nos données sont déjà transformés et standardisés!
+
+**Étape 2:** Faire la RDA partielle:
+```{r, output.lines=c(5:10)}
+mite.spe.subs <- rda(mite.spe.hel ~ Shrub + Topo
+                     + Condition(SubsDens + WatrCont + Substrate),
+                     data = mite.env)
+
+# Extraire les résultats
+summary(mite.spe.subs)
+```
+
+> Shrub et Topo expliquent **9.8%** de la variation de l’abondance de mites, tandis que le substrat explique **42.8%** de cette variation.
+
+**Étape 3:** Interpréter les résultats!
+
+* Quel pourcentage de variance est expliqué par les variables environnementales?
+```{r}
+RsquareAdj(mite.spe.subs)$adj.r.squared
+```
+
+* Le modèle est-il significatif?
+```{r}
+anova.cca(mite.spe.subs, step = 1000)
+```
+
+* Quels axes sont significatifs?
+```{r}
+anova.cca(mite.spe.subs, step = 1000, by = "axis")
+```
+
+> Le $R^2$ ajusté de la RDA globale est **8.33%**, et est significatif (p = 0.001). Les variables environnementales expliquent **9.81%** de la variance de la composition des espèces d'acariens entre les sites, tandis que les covariables du substrat expliquent **42.84%** de cette variation. Cependant, **47.35%** de la variation reste inexpliquée. Les deux premiers axes canoniques sont significatifs.
