--- a/book-fr/07-partition-de-la-variance.Rmd
+++ b/book-fr/07-partition-de-la-variance.Rmd
@@ -1,154 +1,198 @@
-# Variation partitioning
+# Partitionnement de la variation
 
-Variation partitioning is a type of analysis that combines RDA and
-partial RDA to divide the variation of a response variable among two,
-three or four explanatory data sets. Variation partitioning are
-generally represented by Venn diagram in which the percentage of
-explained variance by each explanatory data set (or combination of data
-stets) is reported.
+Le partitionnement de la variation est un type d'analyse qui combine à
+la fois la RDA et la RDA partielle pour diviser la variation d'une
+matrice de variable réponse en deux, trois ou quatre jeux de données
+explicatives. Par exemple, on pourrait partitionner la variation dans une matrice de communauté en fonctiond e variables abiotiques et biotiques, ou de variables locales et à large
+échelle.
 
-In the case of two datasets (below): - Fraction a + b +c is the
-explained variance by the two datasets calculated using a RDA of y by X
-+ W. - Fraction d is the unexplained variance by the two datasets
-calculated using the same RDA as above. - Fraction a is the explained
-variance by the X data set only calculated using a partial of y by X
-with W as covariables. - Fraction c is the explained variance by the W
-data set only calculated using a partial of y by W with X as
-covariables. - Fraction b is calculated by subtraction, i.e. b = \[a +
-b\] + \[b + c\] - \[a + b + c\].
-
-![](images/vennd_varpart.png){.align-center}
-
-Venn diagram of partition of the variation of a response variable y
-among two sets of explanatory variables X and W (from Legendre and
-Legendre 2012).
-
-Variation partitioning is thus an indicated analysis when user what to
-relate the abundance of species in a community to various type of
-environmental variables, for example abiotic vs biotic variables,
-large-scale versus small-scale variables, etc. In the next example, we
-will partition the variation of fish species composition between
-chemical and physiographic variables.
-
-In R, variation partitioning is performed using the function varpart().
-Venn diagrams can also be drawn using the function plot().
-
-```{r, echo = TRUE, eval = FALSE}
-?varpart
-vegandocs("partitioning.pdf")
- 
-#Variation partitioning with all explanatory variables
-spe.part.all <- varpart(spe.hel, envchem, envtopo)
-spe.part.all
-windows(title="Variation partitioning - all variables")
-plot(spe.part.all, digits=2)  
+```{r echo=FALSE, out.width="60%", fig.cap="La structure d'un partitionnement de la variation.", fig.align="center", purl = FALSE}
+knitr::include_graphics("images/VarPart_Matrices.png")
 ```
 
-The output looks like: ![](images/varpart_output.png){.align-center}
-![](images/varpart_output_venn.png){.align-center}
+Le résultat d'un partitionnement de la variation est
+généralement représenté par un diagramme de Venn sur lequel sont annotés
+les pourcentages de variance expliquée par chacun des jeux de données
+explicatives. Dans le cas où on partionnerait la variation entre deux matrices explicatives, le résultat pourrait être représenté comme suit: 
 
-In this case, the chemical variables explain 24.10% of the fish species
-composition, the physiographic variables explain 11.20% of the fish
-species composition and the interaction of these two types of variables
-explained 23.30% of the fish species composition. Note that the
-varpart() function also identify the fractions that can be tested for
-significance using the function anova.cca().
-
-Users can also perform variation partitioning between data sets that
-only contain significant environmental variables:
-
-```{r, echo = TRUE, eval = FALSE}
-#RDA of chemistry variables
-spe.chem <- rda(spe.hel~., data=envchem)
- 
-#Select significant chemistry variables
-R2a.all.chem <- RsquareAdj(spe.chem)$adj.r.squared
-ordiR2step(rda(spe.hel~1, data=envchem), 
-           scope= formula(spe.chem), direction= "forward", R2scope=TRUE, pstep=1000)
-names(envchem)
-(envchem.pars <- envchem[, c( 4, 6, 7 )])
- 
-#RDA with other environmental variables
-spe.topo <- rda(spe.hel~., data=envtopo)
-R2a.all.topo <- RsquareAdj(spe.topo)$adj.r.squared
-ordiR2step(rda(spe.hel~1, data=envtopo), 
-           scope= formula(spe.topo), direction= "forward", R2scope=TRUE, pstep=1000)
-names(envtopo)
-envtopo.pars <- envtopo[, c(1,2)]
- 
-#Varpart
-spe.part <- varpart(spe.hel, envchem.pars, envtopo.pars)
-windows(title="Variation partitioning - parsimonious subsets")
-plot(spe.part, digits=2)
- 
-#Tests of significance 
-anova.cca(rda(spe.hel, envchem.pars), step=1000) # Test of fractions [a+b]
-anova.cca(rda(spe.hel, envtopo.pars), step=1000) # Test of fractions [b+c]
-env.pars <- cbind(envchem.pars, envtopo.pars) 
-anova.cca(rda(spe.hel, env.pars), step=1000) # Test of fractions [a+b+c]
-anova.cca(rda(spe.hel, envchem.pars, envtopo.pars), step=1000) # Test of fraction [a]
-anova.cca(rda(spe.hel, envtopo.pars, envchem.pars), step=1000) # Test of fraction [c]
+```{r, echo=FALSE, out.width="80%", fig.cap="Représentation des résultats d'un partitionnement de la variation.", fig.align="center", purl = FALSE}
+knitr::include_graphics("images/VarPart.png")
 ```
 
-Now, the chemical variables explain 25.30% of the fish species
-composition, the physiographic variables explain 14.20% of the fish
-species composition and the interaction of these two types of variables
-explained 19.60% of the fish species composition. All these fractions
-are significant (p\<0.001).
+Ici, les fraction représentent:  
 
-**Challenge 3**: Perform variation partitioning of the mite species
-abundances with a first dataset for the significant substrate variables
-(SubsDens, WaterCont and Substrate) and a second dataset for the
-significant other variables (Shrud and Topo). What proportion of the
-variation are explained by each dataset? What are the significant
-fractions ?
+* La fraction $[a + b + c]$ est la variance expliquée par *$X1$ *et* $X2$ ensemble, calculée à partir d'une RDA de $Y$ par $X1 + X2$.  
+* La fraction $[d]$ est la variance inexpliquée par *$X1$ *et* $X2$ ensemble, obtenue à partir de la même RDA que ci-dessus.  
+* La fraction $[a]$ est la variance expliquée par $X1$ *seulement*, calculée en faisant une RDA partielle de $Y$ par $X1 | X2$ (en contrôlant pour $X2$).    
+* La fraction $[c]$ est la variance expliquée par $X2$ *seulement*, calculée en faisant une RDA partielle de $Y$ par $X2 | X1$ (en contrôlant pour $X1$).    
+* La fraction $[b]$ est calculée par soustraction, c'est-à-dire $b = [a + b] + [b + c] - [a + b + c].$ Comme $[b]$ n'est pas le résultat d'une RDA, il est impossible de tester sa significativité. Elle peut également être négative, ce qui indique que la matrice de réponse est mieux expliquée par la combinaison de $X1$ et $X2$ que par l'une ou l'autre des matrices prise individuellement.
 
-**Challenge 3**: Solution
+## Partitionnement de la variation dans R
 
- This is what your code may look like:
+Pour démontrer comment le partitionnement des variations fonctionne dans `R`, nous allons partitionner la variation de la composition des espèces de poissons entre les variables chimiques et topographiques. La fonction `varpart()` de `vegan` nous facilite la tâche. 
 
-```{r, echo = TRUE, eval = FALSE}
-str(mite.env)
-(mite.subs=mite.env[,c(1,2,3)]) #First set of variables outlined in challenge 
-(mite.other=mite.env[,c(4,5)]) #Second set of variables outlined in challenge 
- 
-#RDA for mite.subs
-rda.mite.subs <- rda(mite.spe.hel~., data=mite.subs)
-R2a.all.subs <- RsquareAdj(rda.mite.subs)$adj.r.squared
- 
-#Forward selection for mite.subs
-ordiR2step(rda(mite.spe.hel~1, data=mite.subs), 
-           scope= formula(rda.mite.subs), direction= "forward", R2scope=TRUE, pstep=1000)
-names(mite.subs)
-(mite.subs.pars <- mite.subs[, c(2, 3)])
- 
-#RDA for mite.other
-rda.mite.other <- rda(mite.spe.hel~., data=mite.other)
-R2a.all.other <- RsquareAdj(rda.mite.other)$adj.r.squared
- 
-#Forward selection for mite.other
-ordiR2step(rda(mite.spe.hel~1, data=mite.other), 
-           scope= formula(rda.mite.other), direction= "forward", R2scope=TRUE, pstep=1000)
-names(mite.other)
-(mite.other.pars <- mite.other[, c(1,2)])
- 
-#Variation partitioning
-(mite.spe.part <- varpart(mite.spe.hel, ~WatrCont+Substrate, ~Shrub+Topo,
-                          data=mite.env))
-windows(title="Variation partitioning - parsimonious subsets")
-plot(mite.spe.part, digits=2)
- 
-# Tests of all testable fractions
-anova.cca(rda(mite.spe.hel~ WatrCont+Substrate, data=mite.env), step=1000) # Test of fractions [a+b]
-anova.cca(rda(mite.spe.hel~Shrub+Topo, data=mite.env), step=1000) # Test of fractions [b+c]
-(env.pars <- cbind(mite.env[,c(2,3,4,5)])) 
-anova.cca(rda(mite.spe.hel~ WatrCont+Substrate+Shrub+Topo, data=env.pars), step=1000) # Test of fractions [a+b+c]
-anova.cca(rda(mite.spe.hel~WatrCont+Substrate + Condition(Shrub+Topo), data=env.pars), step=1000) # Test of fraction [a]
-anova.cca(rda(mite.spe.hel~Shrub+Topo+ Condition(WatrCont+Substrate ), data=env.pars), step=1000) # Test of fraction [c]
+```{r}
+# Partitionner la variation de la composition des espèces de poissons 
+spe.part.all <- varpart(spe.hel, env.chem, env.topo)
+spe.part.all$part # access results!
 ```
 
-In this case, substrate variables explain 14.00% of the mite species
-composition, the other environmental variables explain 9.1% of the mite
-species composition and the interaction of these two types of vriables
-explained 16.90% of the mite species composition. All these fractions
-are significant (p\<0.001). 
+On peut ensuite visualiser les résultats avec la fonction `plot()`.
+
+```{r, strip.white = TRUE, fig.width = 6, fig.height = 6}
+# Visualiser les résultats avec un diagramme Venn
+plot(spe.part.all,
+     Xnames = c("Chem", "Topo"), # noms des matrices explicatives
+     bg = c("seagreen3", "mediumpurple"), alpha = 80,
+     digits = 2,
+     cex = 1.5)
+```
+
+Les variables chimiques expliquent **24.1%** de la variation de la composition des espèces de poissons, les variables topographiques expliquent **11.2%** de la variation de la composition des espèces de poissons, et ces deux groupes de variables **conjointement** expliquent **23.3%** de la variation de la composition des espèces de poissons. 
+
+:::explanation
+Soyez prudent lorsque vous rapportez les résultats du partitionnement de la variation ! La fraction partagée [b] ne représente pas un effet *d'interaction* des deux matrices explicatives. Considérez-la comme un *chevauchement* entre $X1$ et $X2$. Elle représente la fraction *partagée* de la variation expliquée lorsque les deux sont incluses dans le modèle, c'est-à-dire la partie de la variation qui ne peut être attribuée à $X1$ ou $X2$ séparément. En d'autres termes, le partitionnement de la variation ne peut pas démêler les effets de la chimie et de la topographie pour 23.3% de la variation de la composition de la communauté de poissons.
+:::
+
+## Tester la significativité
+
+La sortie de la fonction `varpart()` rapporte le $R^2$ ajusté pour chaque fraction, mais vous remarquerez que le tableau n'inclut aucun test de signification statistique. Cependant, la colonne `Testable` identifie les fractions qui peuvent être testées pour leur signification en utilisant la fonction `anova.cca()`, tout comme nous l'avons fait avec le RDA ! 
+
+```{r, echo = FALSE, eval = FALSE}
+# Tester la significativité
+```
+
+**X1 [a+b]: Chimie sans tenir compte de topographie**
+
+```{r}
+# [a+b] Chimie sans tenir compte de topographie
+anova.cca(rda(spe.hel, env.chem))
+```
+
+**X2 [b+c] Topographie sans tenir compte de chimie**
+```{r}
+# [b+c] Topographie sans tenir compte de chimie
+anova.cca(rda(spe.hel, env.topo))
+```
+
+**X1 | X2 [a] Chimie seulement (ajusté pour tenir compte de topographie)**
+```{r}
+# [a] Chimie seulement
+anova.cca(rda(spe.hel, env.chem, env.topo))
+```
+
+> C'est une RDA partielle!
+
+**X2 | X1 [c] Topographie (ajusté pour tenir compte de chimie)**
+```{r}
+# [c] Topographie seulement
+anova.cca(rda(spe.hel, env.chem, env.topo))
+```
+
+Toutes les fractions testables dans le partitionnement de la variation sont statistiquement significatives!
+
+## Défi 3
+
+```{r, echo = FALSE, eval = FALSE}
+# Défi 3
+
+# Partitionnez la variation de l’abondance des espèces de mites entres des variables de substrat (`SubsDens`, `WatrCont`) et des variables spatiales significatives.
+# * Quelle est la proportion de variance expliquée par le substrat? par l'espace?
+# * Quelles sont les fractions significatives?
+# * Diagramme Venn des résultats!
+```
+
+Partitionnez la variation de l’abondance des espèces de mites entres des variables de substrat (`SubsDens`, `WatrCont`) et des variables spatiales significatives.
+
+* Quelle est la proportion de variance expliquée par le substrat? par l'espace?  
+* Quelles sont les fractions significatives?  
+* Diagramme Venn des résultats!  
+
+Chargez les variables spatiales:
+```{r}
+data("mite.pcnm")
+```
+
+Rappel de fonctions utiles:
+```{r, eval = FALSE}
+ordiR2step()
+varpart()
+anova.cca(rda())
+plot()
+```
+
+### Défi 3: Solution
+
+```{r, echo = FALSE, eval = FALSE}
+# Défi 3 - Solution! Spoilers ci-dessous!
+```
+
+**Étape 1:** Sélection de variables spatiales significatives.
+
+Il y a *beaucoup* de variables spatiales dans ce jeu de données (22 !). Nous devrions sélectionner les plus importantes, pour éviter de surcharger le modèle.
+
+```{r}
+# Modèle RDA avec tous les variables spatiales
+full.spat <- rda(mite.spe.hel ~ ., data = mite.pcnm)
+
+# Sélection progressive des variables spatiales
+spat.sel <- ordiR2step(rda(mite.spe.hel ~ 1, data = mite.pcnm),
+               scope = formula(full.spat),
+               R2scope = RsquareAdj(full.spat)$adj.r.squared,
+               direction = "forward",
+               trace = FALSE)
+spat.sel$call
+```
+
+**Étape 2:** Créer sous-groupes de variables explicatives.
+
+```{r}
+# Variables de substrat
+mite.subs <- subset(mite.env, select = c(SubsDens, WatrCont))
+
+# Variables spatiales significatives
+mite.spat <- subset(mite.pcnm,
+                    select = names(spat.sel$terminfo$ordered))
+                    # pour rapidement accèder aux variables sélectionnées
+```
+
+**Étape 3:** Partitionnement de la variation dans la matrice d'abondances.
+
+```{r}
+mite.part <- varpart(mite.spe.hel, mite.subs, mite.spat)
+mite.part$part$indfract # extraire résultats
+```
+
+* Quelle est la proportion de variance expliquée par le substrat? **5.9%**
+* Quelle est la proportion de variance expliquée par l'espace? **19.4%**
+
+**Étape 4:** Quelles sont les fractions significatives?
+
+**[a]: Substrat seulement**
+```{r, output.lines = 5:8}
+anova.cca(rda(mite.spe.hel, mite.subs, mite.spat))
+```
+
+
+**[c]: Espace seulement**
+```{r, output.lines = 5:8}
+anova.cca(rda(mite.spe.hel, mite.spat, mite.subs))
+```
+
+**Étape 5:** Visualiser les résultats avec un diagramme Venn.
+```{r, fig.height=6, fig.width=6}
+plot(mite.part,
+     digits = 2,
+     Xnames = c("Subs", "Space"), # titre des fractions
+     cex = 1.5,
+     bg = c("seagreen3", "mediumpurple"), # ajoutez des couleurs!
+     alpha = 80)
+```
+
+**Alors, quels sont les effets de substrat et de l'espace sur les abondances d'espèces de mites?**
+
+**Indice:** Pourquoi on trouve un effet si important de l'espace?
+
+L'espace explique la plupart de la variation dans la communauté: elle explique **19.4% (p = 0.001)** de la variation seule, et **24.8%** est expliqué *conjointement* par l'espace et le substrat. Le susbtrat n'explique que **~6% (p = 0.001)** de la variation entre sites sans l'effet de l'espace. Notez également que la moitié de la variation n'est pas expliquée par les variables que nous avons incluses dans le modèle (regardez les résidus !), le modèle pourrait donc être amélioré.
+
+> Cet effet élevé de l'espace *pourrait* être un signe qu'un processus écologique spatial est important ici (comme la dispersion, par exemple). *Cependant, il pourrait aussi nous indiquer que nous manquons une variable environnementale importante dans notre modèle, qui varie elle-même dans l'espace!
