--- a/book-fr/08-arbre-de-regression-multivarie.Rmd
+++ b/book-fr/08-arbre-de-regression-multivarie.Rmd
@@ -1,218 +1,257 @@
-# Multivariate regression tree
+# Arbre de régression multivarié
 
-Multivariate regression tree (MRT) is a constrained clustering
-technique. Introduced by De'ath (2002), MRTs allow the partitioning of a
-quantitative response matrix by a matrix of explanatory variables
-constraining (guiding) on where to divide the data of the response
-matrix. RDA and MRT are both regression techniques, the former
-explaining the global structure of relationships through a linear model,
-the latter better highlighting local structures and interactions among
-variables by producing a tree model.
+L'arbre de régression multivarié (MRT) est une **technique de groupement hiérarchique**. Introduit par @de2002multivariate, le MRT divise une matrice de réponse ($Y$) en groupes en fonction de seuils de variables explicatives ($X$). Comme la RDA, la MRT est une technique de régression. Alors que la première explique la structure globale des relations par un modèle linéaire, la seconde produit un modèle en arbre pour mettre en évidence les structures locales et les interactions entre les variables.
 
-Advantages of the MRT compared to the RDA:
+```{r, echo=FALSE, out.width="70%", fig.cap="The basic structure of a multivariate regression tree (MRT).", fig.align="center", purl = FALSE}
+knitr::include_graphics("images/MRT.png")
+```
 
-      * does not make assumptions about the shape of the relationships between species and environmental variables (quantitative or categorical), 
-      * is robust in dealing with missing values 
-      * is robust in dealing with collinearity among the explanatory variables
-      * is insensitive to transformations of the explanatory variables, which allows the use of raw values 
-      * the outcome, the tree, is easy to interpret, especially to a non-scientist audience.
+L'arbre de régression multivarié a plusieurs charéctéristiques avantageux:
 
-The MRT technique splits the data into clusters of samples similar in
-their species composition based on environmental value thresholds. It
-involves two procedures running at the same time: 1) the computation of
-the constrained partitioning of the data, and 2) the calculation of the
-relative error of the successive partitioning levels by multiple
-cross-validations. The function mvpart() from the package mvpart
-computes both the partition and the cross-validation.
+* Les résultats sont faciles à visualiser et à interpréter (c'est un arbre !) ;
+* Il identifie clairement l'importance des variables explicatives ;
+* Il est robuste aux valeurs manquantes ;
+* Il est robuste à la colinéarité entre les variables explicatives ;
+* Il peut traiter des variables explicatives brutes, alors il n'est pas nécessaire de les standardiser.
 
-A quick note on MRT terminology:
+:::explanation
+Une petite note sur le vocabulaire lié aux MRTs:
 
-Leaf: Terminal group of sites
+* **Branches**: Chaque lignée formée par un noeud;
+* **Noeuds**: Point où les données se divisent en 2 groupes (caractérisé par une valeur seuil d'une variable explicative);  
+* **Feuilles**: Groupe terminal de sites.  
+:::
 
-Node: Point where the data splits into two groups. It is characterized
-by a threshold value of an explanatory variable.
+## Computation
 
-Branch: Each group formed by a split
+Le MRT divise les données en groupes ayant des compositions en espèce
+semblables et caractérisés par des variables environnementales. La
+méthode implique deux volets s'effectuant en parallèle: **1)** la
+construction de l'arbre et **2)** la sélection de la partition finale
+optimale par validation croisée.
+The MRT splits the data into clusters of samples similar in their species composition based on environmental value thresholds. It involves two procedures running at the same time: **1)** the computation of the constrained partitioning of the data, and **2)** the calculation of the relative error of the successive partitioning levels by multiple cross-validations. Cette validation croisée vise, en fait, à identifier le meilleur arbre prédictif. Le "*meilleur*" arbre varie en fonction des objectifs de votre étude. En général, on cherche un arbre qui est parcimonieux, mais qui possède un nombre de groupes informatif. Il s'agit, bien entendu, d'une décision subjective à prendre en fonction de la question à laquelle vous tentez de répondre.
 
-**1- Constrained partitioning of the data**
+### Construction de l'arbre: Partitionnement des données sous contrainte 
 
-First, the method computes all possible partitions of the sites into two
-groups. For each quantitative explanatory variable, the sites will be
-sorted in the ascending values of the variables; for categorical
-variables, the sites will be aggregated by levels to test all
-combinations of levels. The method will split the data after the first
-object, the second object and so on, and compute the sum of within-group
-sum of squared distances to the group mean (within-group SS) for the
-response data. The method will retain the partition into two groups
-minimizing the within-group SS and the threshold value/level of the
-explanatory variable. These steps will be repeated within the two
-subgroups formed previously, until all objects form their own group. In
-other words, when each leaf of the tree contains one object.
+Premièrement, la méthode calcule toutes les partitions des sites en deux
+groupes. Pour chaque variable environnementale quantitative, les sites
+seront classés en ordre croissant des valeurs; pour chaque variable
+qualitative (ou catégorique), les sites seront classés par niveaux. La
+méthode divise les données après le premier objet, après le second, et
+ainsi de suite et calcule à chaque fois la somme des carrés des écarts
+intra-groupes de la matrice réponse. La méthode choisira la partition
+qui minimisera la somme des carrés des écarts intra-groupes et le point
+de division défini par une valeur seuil d'une variable
+environnementale. Ces étapes seront répétées dans les deux groupes
+formés précédemment, jusqu'à ce que tous les objets forment leur propre
+groupe. En d'autre mots, jusqu'à ce que chaque feuille de l'arbre de
+contienne qu'un seul objet.
 
-**2- Cross-validation and pruning the tree**
+### Sélection de l'arbre: Validation croisée et élagage de l'arbre
 
-The mvpart function also performs a cross-validation and identifies the
-best predictive tree. The cross-validation procedure consists in using a
-subset of the objects to construct the tree, and to allocate the
-remaining objects to the groups. In a good predictive tree, objects are
-assigned to the appropriate groups. The cross-validated relative error
-(CVRE) is the measure of the predictive error. Without cross-validation,
-one would retain the number of partitions minimizing the variance not
-explained by the tree (i.e. the relative error: the sum of the
-within-group SS over all leaves divided by the overall SS of the data).
-This is the solution maximizing the R2 so to speak. This approach is
-explanatory rather than predictive.
+La fonction effectue également une validation croisée et identifie
+l'arbre ayant le meilleur pouvoir prédictif. La validation croisée
+s'effectue en utilisant une partie des données pour construire l'arbre
+et le reste des données est classé dans les groupes créés. Dans un arbre
+ayant un *bon pouvoir prédictif*, les objets sont assignés aux groupes
+appropriés. L'**erreur relative de validation croisée (ERVC ou CVRE)**
+mesure l'erreur de prédiction. Sans validation croisée, le nombre de
+partitions retenu serait celui minimisant la variance non expliquée par
+l'arbre (i.e. l'erreur relative: la somme des carrés des écarts
+intra-groupes de toutes les feuilles divisée par la somme de carrée des
+écarts de toutes les données). Cette solution maximise le $R^2$ et on
+obtiendrait donc un arbre explicatif plutôt que prédictif.
 
-Let's create a multivariate regression tree on the Doubs data.
 
-```{r, echo = TRUE, eval = FALSE}
-?mvpart
- 
-#Prepare the data: remove “distance from source”
+## MRT dans R
+
+La fonction `mvpart()` du paquet `mvpart` calcule à la fois la partition et les étapes de validation croisée requises pour construire un arbre de régression multivarié.
+
+Nous allons démontrer le processus de construction d'un arbre de régression multivarié sur les données de la rivière Doubs.
+
+```{r, eval = FALSE, echo = FALSE}
+# Enlever la variable “distance from source”
+env <- subset(env, select = -das)
+```
+
+```{r, fig.keep = 'first', purl = FALSE}
+# Enlever la variable “distance from source”
 env <- subset(env, select = -das)
 
-# Create the regression tree
-doubs.mrt <- mvpart(as.matrix(spe.hel) ~. ,env,
-            legend=FALSE, margin=0.01, cp=0, xv="pick",
-            xval=nrow(spe.hel), xvmult=100, which=4)
+# Construire l'arbre de regression multivarié
+doubs.mrt <- mvpart(as.matrix(spe.hel) ~ ., data = env,
+                    xv = "pick", # selection graphique intéractive
+                    xval = nrow(spe.hel), # nombre de validations
+                    xvmult = 100, # nombre de validations multiples
+                    which = 4, # identifier les noeuds
+                    legend = FALSE, margin = 0.01, cp = 0)
 ```
 
-At this point, you will need to select the tree who's size (number of
-groups) is appropriate to the aim of your study from the following
-graph. This step requires the argument xv=\"pick\". In other words, you
-must prune the tree by picking the best-fit tree. Indeed, a fully
-resolved tree is not the desirable outcome. Instead, one is usually
-interested in a tree including only informative partitions/groups. It is
-possible to have an a-priori idea of the number of potential groups to
-be retained as well.
+À ce stade, vous devrez sélectionner l'arbre avec un nombre *approprié* de groupes, en fonction de l'objectif de votre étude. En d'autres mots, vous devez élaguer l'arbre en choisissant l'arbre le plus approprié. Un arbre entièrement résolu n'est pas le résultat souhaitable ; au contraire, on s'intéresse généralement à un arbre comprenant uniquement des partitions/groupes informatifs. Dans ce cas, il est possible d'avoir une idée *a priori* du nombre de groupes potentiels à retenir. Vous pouvez faire ce choix de manière interactive, avec l'argument `xv = "pick"`.
 
-![](images/cross_validation.png){.align-center}
+Le graphique montre l'erreur relative (RE, en vert) et l'erreur
+relative de validation croisée (en bleu) d'arbres de tailles
+croissantes. Le point rouge indique la solution avec la valeur minimale
+de CVRE et le point orange montre l'arbre le plus petit dont la valeur
+de CVRE est à 1 écart type de de la valeur CVRE minimale. @breiman1984classification suggèrent de choisir cette dernière option car cet arbre a à la
+fois une erreur relative de validation croisée près de la plus faible et
+il contient un nombre restreint de groupe, ce qui en fait un choix
+parcimonieux. Les barres vertes en haut du graphique indiquent le nombre
+de fois que chaque taille d'arbre a été choisi durant le processus de
+validation croisée. Ce graphique est interactif. Il faudra donc cliquer sur le point bleu
+correspondant à la taille de l'arbre choisie. En résumé:
 
-The graph shows the relative error RE (in green) and the cross-validated
-relative error CVRE (in blue) of trees of increasing size. The red dot
-indicates the solution with the smallest CVRE, and the orange dot shows
-the smallest tree within one standard error of CVRE. It has been
-suggested that instead of choosing the solution minimizing CVRE, it
-would be more parsimonious to opt for the smallest tree for which the
-CVRE is within one standard error of the tree with the lowest CVRE
-(Breiman et al. 1984). The green bars at the top indicate the number of
-times each size was chosen during the cross-validation process.
+* Points verts: Erreur relative
+* Points bleus: Erreur relative de validation croisée (CVRE)
+* Point rouge: Arbre avec la valeur minimale de CVRE
+* Point orange: l'arbre le plus petit ayant un CVRE à 1 écart type du CVRE minimal
+* Barres vertes: # de fois que chaque taille d'arbre a été choisi
 
-This graph is interactive, which means you will have to click on the
-blue point corresponding your choice of tree size. Once you do so, the
-corresponding multivariate regression tree will appear. If you click on
-the orange dot, the following tree appears.
+Nous n'avons pas de prédiction *a priori* sur la façon de diviser ces données, donc nous allons sélectionner le plus petit arbre à moins d'une erreur standard de l'arbre qui est le mieux ajusté (c'est-à-dire, le point orange). Nous pouvons sélectionner cet arbre en utilisant l'argument `xv = "1se"`.
 
-![](images/mrt_1se.png){.align-center}
-
-The statistics at the bottom of the figure are: the residual error (the
-reciprocal of the R2 of the model, in this case 43.7%), the
-cross-validated error, and the standard error. This tree has only two
-leaves separated by one node. This node splits the data into two groups
-at the threshold altitude value of 361.5m.
-
-Each leaf is characterized by a small barplot showing the abundances of
-the species, its number of sites and its relative error.
-
-We can compare this tree with the 10-group solution, as suggested by the
-CVRE criterion, or choose a solution in between, e.g. with 4 leaves to
-compare.
-
-```{r, echo = TRUE, eval = FALSE}
-# Using the CVRE criterion
-doubs.mrt.cvre <- mvpart(as.matrix(spe.hel)~., env, 
-                 legend=FALSE, margin=0.01, cp=0,xv="pick", 
-                 xval=nrow(spe.hel), xvmult=100,which=4)
-
-# Choosing ourself the best number of partitions
-doubs.mrt.4 <- mvpart(as.matrix(spe.hel)~., env, 
-              legend=FALSE, margin=0.01, cp=0, xv="pick", 
-              xval=nrow(spe.hel), xvmult=100,which=4)
+```{r, fig.keep = 'last', purl = FALSE}
+# Faire le choix d'arbre (point orange)
+doubs.mrt <- mvpart(as.matrix(spe.hel) ~ ., data = env,
+                    xv = "1se", # select smallest tree within 1 se
+                    xval = nrow(spe.hel), # number of cross-validations
+                    xvmult = 100, # number of multiple cross-validations
+                    which = 4, # plot both node labels
+                    legend = FALSE, margin = 0.01, cp = 0)
 ```
 
-![](images/mrt_cvre.png){.align-center} ![](images/mrt_4.png){.align-center}
+Des statistiques sont affichées au bas de l'arbre: l'erreur résiduelle,
+l'erreur de validation croisée et l'erreur type. Cet arbre n'est
+constitué que de deux branches séparées par un noeud. Sous chaque feuille, on retrouve un petit diagramme à bandes montrant
+les abondances des espèces des sites retrouvés dans la branche, le
+nombre de sites et l'erreur relative. De cette figure, on peut rapporter les statistiques suivantes: 
+* La matrice des espèces est partitionnée en fonction d'un seuil d'altitude (361.5 m)  
+* Erreur résiduelle = **0.563**, ce qui signifie que le R2 du modèle est **43.7%** ($1 - 0.563 = 0.437$)
 
-The 10-group solution has a high EXPLANATORY power but its predictive
-power (indicated by the cross-validated error) is just slightly better
-than that of the 2-group solution. The 4-group solution seems to be a
-good compromise.
+### Processus de sélection
 
-More information can be obtained by looking at the summary output.
+On peut aussi comparer plusieurs solutions, pour nous aider à choisir le meilleur arbre. Par exemple, examinons une solution à dix groupes!
 
-```{r, echo = TRUE, eval = FALSE}
+```{r, results = 'hide', purl = FALSE}
+# Solution avec 10 groupes
+mvpart(as.matrix(spe.hel) ~ ., data = env,
+        xv = "none", # aucune validation croisée
+        size = 10, # fixer la taille de l'arbre
+        which = 4,
+        legend = FALSE, margin = 0.01, cp = 0, prn = FALSE)
+```
+
+Cet arbre est beaucoup plus difficile à interpréter, car il y a beaucoup de groupes ! Bien que cette version de l'arbre offre un pouvoir explicatif plus élevé, son pouvoir *prédictif* (erreur CV = 0.671) est sensiblement le même que celui de la solution précédente à deux groupes (erreur CV = 0.673). Ceci suggère que nous pourrions essayer un arbre avec un peu plus de groupements que la solution à deux groupes, tout en restant en dessous de dix groupes.
+
+Voyons une solution avec moins de groupes (4 groupes)!
+```{r, purl = FALSE}
+# Solution avec 4 groupes seulement
+mvpart(as.matrix(spe.hel) ~ ., data = env,
+        xv = "none", # aucune validation croisée
+        size = 4, # fixer la taille de l'arbre
+        which = 4,
+        legend = FALSE, margin = 0.01, cp = 0, prn = FALSE)
+```
+
+Cet arbre est beaucoup plus facile à interpréter! Il offre également un pouvoir explicatif plus élevé (erreur plus faible) que notre solution originale, et un pouvoir prédictif plus élevé que les deux solutions précédentes (erreur CV). Nous avons un champion!
+
+### Interprétation des résultats
+
+Pour savoir combien de variance est expliquée par chaque nœud de l'arbre, nous devons consulter le paramètre de complexité (CP). Le CP à `nsplit = 0` est le $R^2$ de l'arbre complet. 
+
+```{r, purl = FALSE}
+# Vérifier le paramètre de compléxité
+doubs.mrt$cptable
+```
+
+Le résumé présente ensuite, pour chaque nœud, les meilleures valeurs de seuil pour le groupement des données. 
+
+```{r, echo = TRUE, purl = FALSE}
 summary(doubs.mrt)
 ```
 
-![](images/doubs_mrt_summary.png){.align-center}
+### Indicator species
 
-CP stands for "complexity parameter", which is the equivalent of the
-variance explained by each node. The CP at nsplit 0 is the R2 of the
-whole tree. The summary then outlines, for each node, the best threshold
-values to split the data. While informative, this output is very dense.
-A more detailed and yet more manageable output can be generated by using
-the wrapper from the function MRT() of the MVPARTwrap package. Plus,
-this other function allows identification of discriminant species.
+On pourrait aussi identifier les espèces indicatrices importantes pour chaque groupe de sites.
 
-```{r, echo = TRUE, eval = FALSE}
-# Find discriminant species with MRT results
-doubs.mrt.wrap<-MRT(doubs.mrt,percent=10,species=colnames(spe.hel))
-summary(doubs.mrt.wrap)
+```{r, purl = FALSE}
+# Calcul d'une valeur indval pour chaque espèce
+doubs.mrt.indval <- indval(spe.hel, doubs.mrt$where)
 
-# Extract indval p-values
-doubs.mrt.indval<-indval(spe.hel,doubs.mrt$where)
-doubs.mrt.indval$pval
+# Extraire les espèces indicatrices à chaque noeud
+doubs.mrt.indval$maxcls[which(doubs.mrt.indval$pval <= 0.05)]
 
-# Extract indicator species of each node, with its indval
-doubs.mrt.indval$maxcls[which(doubs.mrt.indval$pval<=0.05)]
-doubs.mrt.indval$indcls[which(doubs.mrt.indval$pval<=0.05)]
+# Extraire leur valeur indval
+doubs.mrt.indval$indcls[which(doubs.mrt.indval$pval <= 0.05)]
 ```
 
-![](images//doubs_mrt_discriminant.png){.align-center}
-![](images//doubs_mrt_finalpart.png){.align-center}
+TRU a la valeur indicatrice la plus élevée (0.867) dans l'ensemble, et est une espèce indicatrice pour la première feuille (alt >= 361.5) de l'arbre.
 
-The main discriminant species of the first split are TRU, VAI and ABL.
-TRU and VAI contribute highly to the left leaf, and ABL is the most
-indicative species of the sites at lower altitude (\<361.5m). This
-output also indicates which sites are included in each leaf.
+## Défi 4
 
-![](images//doubs_mrt_indval.png){.align-center}
-
-The second part of the code allows us to test the significance of the
-indicator value of each species through a permutation test. For each
-significant indicator species, we extracted the leaf number and the
-indicator value. In this particular case, TRU, VAI and LOC are all
-significant species of the left leaf, TRU having the highest indicator
-value (0.867).
-
-**Challenge 4**: Run the multivariate regression tree for the mite data.
-Select the minimum size of tree within one SE of the CVRE. What is the
-proportion of variance explained by this tree? How many leaves contain
-this tree? What are the discriminant species?
-
-**Challenge 4** - Solution
-
-
-
-```{r, echo = TRUE, eval = FALSE}
-mite.mrt<-mvpart(data.matrix(mite.spe.hel)~.,mite.env,
-legend=FALSE,margin=0.01,cp=0,xv="pick",
-xval=nrow(mite.spe.hel),xvmult=100,which=4)
-summary(mite.mrt)
-
-mite.mrt.wrap<-MRT(mite.mrt,percent=10,species=colnames(mite.spe.hel))
-summary(mite.mrt.wrap)
-
-mite.mrt.indval<-indval(mite.spe.hel,mite.mrt$where)
-mite.mrt.indval$pval
-
-mite.mrt.indval$maxcls[which(mite.mrt.indval$pval<=0.05)]
-mite.mrt.indval$indcls[which(mite.mrt.indval$pval<=0.05)]
+```{r, echo = FALSE, eval = FALSE, purl = FALSE}
+# Défi 4
+# 
+# Créez un arbre de régression multivarié pour les données .comment[mite].
+# * Choisir l'arbre le plus petit à 1 écart type du CVRE minimal.
+# * Quelle est la variance totale expliquée par cet arbre?
+# * Combien y a-t-il de feuilles?
+# * Quels sont les 3 principales espèces discriminantes?
 ```
 
-25.6% of the variation in the mite species assemblage across sites is
-explained by the partition of the sites based on water content of the
-substrate (at 385.1 mg/l). LCIL is a discriminant species of sites with
-higher water content, and has an indicator value of 0.715.
+Créez un arbre de régression multivarié pour les données `mite`.
+* Choisir l'arbre le plus petit à 1 écart type du CVRE minimal.
+* Quelle est la variance totale expliquée par cet arbre?
+* Combien y a-t-il de feuilles?
+* Quels sont les 3 principales espèces discriminantes?
+
+Rappel: chargez les données!
+```{r, purl = FALSE}
+data("mite")
+data("mite.env")
+```
+
+Rappel de fonctions utiles:
+```{r, eval = FALSE, purl = FALSE}
+?mvpart() # argument 'xv'!
+summary()
+```
 
 
+### Challenge 4: Solution
 
+```{r, echo = FALSE, eval = FALSE, purl = FALSE}
+# Défi 4: Solution! Spoilers ci-dessous!
+```
+
+**Étape 1:** Créer un arbre de régression multivarié.
+
+```{r, results = 'hide', purl = FALSE}
+mite.mrt <- mvpart(as.matrix(mite.spe.hel) ~ ., data = mite.env,
+                   xv = "1se",
+                   xval = nrow(mite.spe.hel),
+                   xvmult = 100,
+                   which = 4, legend = FALSE, margin = 0.01, cp = 0,
+                   prn = FALSE)
+```
+
+
+Quelle est la variance totale expliquée ($R^2$) par cet arbre?
+* $1 - 0.748 = 0.252$, alors l'arbre explique **25.2%** de la variation dans la matrice d'abondances.
+
+Combien y a-t-il de feuilles?
+* 2 feuilles
+  
+**Étape 2**: Identifier les espèces indicatrices.
+
+Quelles sont les espèces indicatrices pour chaque groupe de sites?
+
+```{r, purl = FALSE}
+# Calcul d'une valeur indicatrice pour chaque espèce
+mite.mrt.indval <- indval(mite.spe.hel, mite.mrt$where)
+
+# Extraire les espèces indicatrices à chaque noeud
+mite.mrt.indval$maxcls[which(mite.mrt.indval$pval <= 0.05)]
+
+# Extraire leur valeur indval
+mite.mrt.indval$indcls[which(mite.mrt.indval$pval <= 0.05)]
+```
