--- a/book-fr/references.bib
+++ b/book-fr/references.bib
@@ -83,3 +83,144 @@
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
+
+@inbook{verneaux1973,
+	author = {{Verneaux}, {J.}},
+	year = {1973},
+	date = {1973},
+	pages = {257},
+	series = {Essai de biotypologie},
+	volume = {Thèse d'état},
+	address = {Besançon}
+}
+
+@article{legendre2001,
+	title = {Ecologically meaningful transformations for ordination of species data},
+	author = {{Legendre}, {Pierre} and {Gallagher}, {Eugene D.}},
+	year = {2001},
+	month = {10},
+	date = {2001-10-01},
+	journal = {Oecologia},
+	pages = {271--280},
+	volume = {129},
+	number = {2},
+	doi = {10.1007/s004420100716},
+	url = {https://doi.org/10.1007/s004420100716},
+	langid = {en}
+}
+
+@book{borcard2011,
+	title = {Numerical Ecology with R},
+	author = {{Borcard}, {Daniel} and {Gillet}, {François} and {Legendre}, {Pierre}},
+	year = {2011},
+	date = {2011},
+	publisher = {Springer-Verlag},
+	series = {Use R!},
+	doi = {10.1007/978-1-4419-7976-6},
+	url = {https://www.springer.com/gp/book/9781441979766},
+	note = {DOI: 10.1007/978-1-4419-7976-6},
+	address = {New York},
+	langid = {en}
+}
+
+@article{rao1964,
+	title = {The Use and Interpretation of Principal Component Analysis in Applied Research},
+	author = {{Rao}, {C. Radhakrishna}},
+	year = {1964},
+	date = {1964},
+	journal = {Sankhy{\={a}}: The Indian Journal of Statistics, Series A (1961-2002)},
+	pages = {329--358},
+	volume = {26},
+	number = {4},
+	url = {https://www.jstor.org/stable/25049339},
+	note = {Publisher: Springer}
+}
+
+@book{legendre2012,
+	title = {Numerical Ecology},
+	author = {{Legendre}, {P.} and {Legendre}, {Louis}},
+	year = {2012},
+	month = {07},
+	date = {2012-07-21},
+	publisher = {Elsevier},
+	langid = {en}
+}
+
+@book{borcard2011,
+	title = {Numerical Ecology with R},
+	author = {{Borcard}, {Daniel} and {Gillet}, {François} and {Legendre}, {Pierre}},
+	year = {2011},
+	date = {2011},
+	publisher = {Springer-Verlag},
+	series = {Use R!},
+	doi = {10.1007/978-1-4419-7976-6},
+	url = {https://www.springer.com/gp/book/9781441979766},
+	note = {DOI: 10.1007/978-1-4419-7976-6},
+	address = {New York},
+	langid = {en}
+}
+
+@article{de2002multivariate,
+  title={Multivariate regression trees: a new technique for modeling species--environment relationships},
+  author={De'ath, Glenn},
+  journal={Ecology},
+  volume={83},
+  number={4},
+  pages={1105--1117},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
+@book{breiman1984classification,
+  title={Classification and regression trees},
+  author={Breiman, Leo and Friedman, Jerome and Stone, Charles J and Olshen, Richard A},
+  year={1984},
+  publisher={CRC press}
+}
+
+@article{alday2014simple,
+  title={A simple test for alternative states in ecological restoration: the use of principal response curves},
+  author={Alday, Josu G and Marrs, Rob H},
+  journal={Applied Vegetation Science},
+  volume={17},
+  number={2},
+  pages={302--311},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{clarke2014change,
+  title={Change in marine communities: an approach to statistical analysis and interpretation},
+  author={Clarke, K Robert and Gorley, RN and Somerfield, Paul J and Warwick, RM},
+  year={2014},
+  publisher={Primer-E Ltd}
+}
+
+@book{gotelli2004primer,
+  title={A primer of ecological statistics},
+  author={Gotelli, Nicholas J and Ellison, Aaron M and others},
+  volume={1},
+  year={2004},
+  publisher={Sinauer Associates Sunderland}
+}
+
+@article{poulin2013new,
+  title={A new approach for tracking vegetation change after restoration: a case study with peatlands},
+  author={Poulin, Monique and Andersen, Roxane and Rochefort, Line},
+  journal={Restoration Ecology},
+  volume={21},
+  number={3},
+  pages={363--371},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@book{legendre2012,
+	title = {Numerical Ecology},
+	author = {{Legendre}, {P.} and {Legendre}, {Louis}},
+	year = {2012},
+	month = {07},
+	date = {2012-07-21},
+	publisher = {Elsevier},
+	langid = {en}
+}
