--- a/book-en/05-redundancy-analysis.Rmd
+++ b/book-en/05-redundancy-analysis.Rmd
@@ -174,6 +174,8 @@ ordiplot(spe.rda.signif, scaling = 2, type = "text")
 Both `plot()` and `ordiplot()` make quick and simple ordination plots, but you can customize your plots by extracting scores with `scores()` and manually setting the aesthetics of `points()`, `text()`, and `arrows()`. Here is an example of a custom triplot. Feel free to play around with the colours and other parameters to make it your own!
 
 ```{r}
+# Custom triplot code!
+
 ## extract % explained by the first 2 axes
 perc <- round(100*(summary(spe.rda.signif)$cont$importance[2, 1:2]), 2)
 
