--- a/book-fr/10-considerations-finales.Rmd
+++ b/book-fr/10-considerations-finales.Rmd
@@ -1,80 +1,34 @@
-# (PART\*) Final considerations {-}
+# (PART\*) Considérations finales {.unnumbered}
 
-# Summary
+# Résumé
 
-To be included.
+Cet atelier a couvert une série d'analyses sous contraintes, qui nous permettent de **tester des hypothèses** sur les déterminants des patrons dans une matrice de réponse, telle qu'une matrice décrivant l'abondance d'espèces échantillonnées sur plusieurs sites. Nous pouvons utiliser le RDA, le RDA partiel et le partitionnement de la variation pour quantifier l'importance des différentes variables (ou de groupes de variables) sur une matrice de réponse. Dans de nombreux cas, cette matrice de réponse était une matrice de composition de la communauté de sites x espèces, mais ces techniques ne sont pas limitées à l'écologie des communautés.
 
-# Additional resources
+Nous avons également vu deux méthodes permettant de tester des hypothèses sur les groupements de sites. Nous pouvons utiliser des arbres de régression multivariés (MRT) pour déterminer quelles variables explicatives distinguent les groupes de sites, et décrire comment notre matrice de réponse est organisée dans ces groupes distincts. Si nous disposons déjà d'un groupement de sites *a priori*, nous pouvons utiliser l'analyse discriminante linéaire (ADL) pour vérifier si ce groupement s'aligne sur les données environnementales, et prédire le groupement de nouveaux sites.
 
+# Ressources additionelles
 
-```{r, echo = TRUE, eval = FALSE}
-?cca #(constrained correspondence analysis)
-# Constrained Correspondence Analysis (CCA) is a canonical ordination method similar to RDA that preserve
-# Chi-square distances among object (instead of Euclidean distances in RDA). This method is well suited for the
-# analysis of large ecological gradients.
+Malheureusement, nous n'avons pu présenter qu'un sous-ensemble d'ordinations contraintes dans cet atelier. Toutefois, il existe de nombreuses autres options ! Celles-ci incluent, mais ne sont pas limitées, aux techniques suivantes :
 
+- **L'analyse des correspondances sous contrainte (CCA ou ACC)** est une méthode d'ordination canonique similaire à la RDA qui préserve les distances khi-carré entre les objets (au lieu des distances euclidiennes dans la RDA). Cette méthode est bien adaptée à l'analyse de grands gradients écologiques.
 
+- **L'analyse de corrélation canonique (CCorA)** diffère de la RDA dans la mesure où les deux matrices sont considérées comme symétriques, alors que dans la RDA la matrice Y dépend de la matrice X. La principale utilisation de cette technique est de tester la signification de la corrélation entre deux ensembles de données multidimensionnelles, puis d'explorer la structure des données en calculant les corrélations (qui sont les racines carrées des valeurs propres de la CCorA) qui peuvent être trouvées entre les fonctions linéaires de deux groupes de descripteurs.
 
-?CCorA # Canonical Correlation Analysis
+- **L'analyse de co-inertie (CoIA)** est une méthode d'ordination canonique symétrique qui permet de comparer des paires d'ensembles de données qui jouent des rôles équivalents dans l'analyse. La méthode trouve un espace commun sur lequel les objets et les variables de ces ensembles de données peuvent être projetés et comparés. Par rapport à la méthode CCorA, l'analyse de co-inertie n'impose aucune contrainte concernant le nombre de variables dans les deux ensembles, de sorte qu'elle peut être utilisée pour comparer des communautés écologiques même lorsqu'elles sont riches en espèces. L'analyse de co-inertie n'est cependant pas bien adaptée à l'analyse de paires d'ensembles de données qui contiennent les mêmes variables, car l'analyse n'établit pas de correspondance biunivoque entre les variables des deux ensembles de données ; la méthode ne "sait" pas que la première variable est la même dans le premier et le second ensemble de données, et de même pour les autres variables.
 
-# Canonical Correlation Analysis (CCorA) differs from RDA given that the two matrices are considered symmetric
-# while in RDA the Y matrix is dependent on the X matrix. The main use of this technique is to test the
-# significance of the correlation between two multidimensional data sets, then explore the structure of the data by
-# computing the correlations (which are the square roots of the CCorA eigenvalues) that can be found between
-# linear functions of two groups of descriptors.
+- **L'analyse factorielle multiple (MFA)** peut être utilisée pour comparer plusieurs ensembles de données décrivant les mêmes objets. La MFA consiste à projeter les objets et les variables de deux ou plusieurs ensembles de données sur une PCA (ou ACP) globale, calculée à partir de tous les ensembles de données, dans laquelle les ensembles reçoivent des poids égaux.
 
+```{r, echo = TRUE, eval = FALSE, purl = FALSE}
+?cca # (L'analyse des correspondances sous contrainte)
 
-help(coinertia, package=ade4) # Coinertia Analysis
+?CCorA # L'analyse de corrélation canonique (CCorA)
 
-#Coinertia Analysis (CoIA) is a symmetric canonical ordination method that is appropriate to compare pairs
-# of data sets that play equivalent roles in the analysis. The method finds a common space onto which the objects
-# and variables of these data sets can be projected and compared. Compared to CCorA, co-inertia analysis
-# imposes no constraint regarding the number of variables in the two sets, so that it can be used to compare
-# ecological communities even when they are species-rich. Co-inertia analysis is not well-suited, however, to
-# analyse pairs of data sets that contain the same variables, because the analysis does not establish one-to-one
-# correspondences between variables in the two data sets; the method does not ‘know’ that the first variable is the
-# same in the first and the second data sets, and likewise for the other variables.
+help(coinertia, package=ade4) # L'analyse de co-inertie (CoIA)
 
+help(mfa, package=ade4) # L'analyse factorielle multiple (MFA)
 
-help(mfa, package=ade4) # Multiple Factorial Analysis
-
-# Multiple factor analysis (MFA) can be used to compare several data sets describing the same objects. MFA
-# consists in projecting objects and variables of two or more data sets on a global PCA, computed from all data
-# sets, in which the sets receive equal weights.
-
-
-# Spatial analysis can be performed using packages AEM and PCNM : http://r-forge.r-project.org/R/?group_id=195
+# L'analyse spatiale peut être effectuée à l'aide du paquet adespatial. Les fonctions propres spatiales peuvent être calculées avec dbmem(), et elles sont fonctionnellement les mêmes que celles de PCNM que nous avons vues dans le jeu de données mite.pcnm de vegan.
+# https://cran.r-project.org/web/packages/adespatial/index.html
 ```
 
-
-Add the references below to the BibTeX file.
-
-Alday & Marrs (2014). A simple test for alternative states in ecological
-restoration: the use of principal response curves. Journal of Vegetation
-Science, 17, 302-311.
-
-Borcard, Gillet & Legendre (2011). Numerical Ecology with R. Springer
-New York.
-
-Breiman, L., J. H. Friedman, et al. (1984). Classification and
-Regression Trees. Belmont, California, USA, Wadsworth International
-Group.
-
-Budyko, M.I. (1969) The effect of solar radiation variations on the
-climate of the Earth. Tellus, 21(5), 611-619.
-
-Clarke & Warwick (2001). Change in Marine Communities: An Approach to
-Statistical Analysis and Interpretation 2nd edition. Primer-E Ltd.
-
-De'ath, G. (2002). Multivariate regression trees : a new technique for
-modeling species-environment relationships. Ecology, 83(4), 1105--1117.
-
-Gotelli & Ellison (2004). A Primer of Ecological Statistics. Sinaeuer
-Associates Inc., Sunderland MA.
-
-Legendre & Legendre (2012). Numerical Ecology 3rd edition. Elsevier
-Science BV, Amsterdam.
-
-Poulin, Andersen & Rochefort (2013) A new approach for tracking
-vegetation change after restoration: a case study with peatlands.
-Restoration Ecology, 21, 363-371.
+Notre liste de références comprend de nombreux articles et livres utiles pour approfondir les ordinations sous contraintes. Nous recommandons particulièrement @legendre2012 pour une vue approfondie de ces techniques, de leur calcul et de leurs applications potentielles. Nous recommandons également @borcard2011 pour en savoir plus sur la façon dont ces techniques peuvent être implémentées dans `R`.
